# applet-recovery-key

./: .gitignore  GET_INFO_commands.txt  LICENSE.md  README.md  generate_cap.sh  manage_applet.sh  pyproject.toml
.github/workflows/: generate_cap_and_test.yml
src/com/ledger/appletcharon/: AppletCharon.java  AppletStateMachine.java  CapsuleCBC.java  CapsuleGCM.java  Certificate.java  CertificatePKI.java  CommandProcessor.java  Constants.java  CryptoUtil.java  Curve.java  EphemeralCertificate.java  FatalError.java  PINManager.java  Secp256k1.java  SeedManager.java  TransientStateMachine.java  Utils.java  Version.java
src/com/ledger/appletrecoverykey/: AppletRecoveryKey.java  AppletStateMachine.java  CapsuleCBC.java  CertificatePKI.java  CommandProcessor.java  Constants.java  CryptoUtil.java  Curve.java  EphemeralCertificate.java  FatalError.java  LifeCycleStateMachine.java  PINManager.java  Secp256k1.java  SeedManager.java  TransientStateMachine.java  Utils.java  Version.java
tests/: conftest.py  pyproject.toml  test_cmd_change_pin.py  test_cmd_get_certificate.py  test_cmd_get_data.py  test_cmd_get_public_key.py  test_cmd_get_status.py  test_cmd_mark_tests_passed.py  test_cmd_request_upgrade.py  test_cmd_set_certificate.py  test_cmd_set_pin.py  test_cmd_set_status.py  test_cmd_validate_certificate.py  test_cmd_verify_pin.py  test_fsm_attested_auth.py  test_fsm_attested_no_auth.py  test_fsm_fab_mode.py  test_fsm_pending_mode.py  test_fsm_perso_auth.py  test_fsm_perso_pin_lock.py  test_fsm_perso_pin_unlock.py
