[project]
name = "tests"
version = "0.1.0"
requires-python = "==3.11.*"
description = "Python functional tests for the Charon smartcard applet"
authors = [
    {name = "Alexis Grojean", email = "alexis.grojean@ledger.fr"},
]

dependencies = [
    "pytest>=8.3.3",
    "pytest-order>=1.3.0",
]

[project.optional-dependencies]
local = [ "ledger-pluto @ git+ssh://git@github.com/LedgerHQ/ledger-pluto.git@add-scp02-plain" ]
github-actions = [ "ledger-pluto @ git+https://${GH_USER}:${GH_TOKEN}@github.com/LedgerHQ/ledger-pluto.git@add-scp02-plain" ]

readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--order-scope=module"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
