[project]
name = "tests"
version = "0.1.0"
requires-python = "==3.11.*"
description = "Python functional tests for the Ledger Recovery Key smartcard applet"
authors = [
    {name = "Alexis Grojean", email = "alexis.grojean@ledger.fr"},
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pytest>=8.3.3",
    "pytest-order>=1.3.0",
]

[project.optional-dependencies]
local = [ "ledger-pluto @ git+ssh://git@github.com/LedgerHQ/ledger-pluto.git@main" ]
github-actions = [ "ledger-pluto @ git+https://${GH_USER}:${GH_TOKEN}@github.com/LedgerHQ/ledger-pluto.git@main" ]

[tool.pdm]
distribution = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--order-scope=module"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
